--- a/data/stats.html
+++ b/data/stats.html
@@ -3,55 +3,99 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <html>
-<head>
-<title>Firefox data explorer - Stats</title>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="explorer.css">
 
-<script type="text/javascript"
-        src="jquery-3.1.1.min.js">
-</script>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script type="text/javascript" src="stats.js"></script>
+<head>
+  <title>Firefox data explorer - Stats</title>
+  <meta charset="utf-8" />
+
+  <!-- CSS  -->
+  <!-- CSS: Framework BS 4 alpha -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!-- CSS: Framework:Theme United -->
+  <link rel="stylesheet" href="theme_cosmo.min.css">
+  <!-- CSS: Loading -->
+  <link rel="stylesheet" href="explorer.css">
+
 </head>
 
 <body>
 
-<a id="github-banner"
-   href="https://github.com/georgf/fx-data-explorer">
-   <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
-</a>
+  <!-- Navbar -->
+  <div class="container-full">
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Probe data</a>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Find probes <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="stats.html">Stats</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 
-<div id="overlay">
-  <img id="loading-anim" src="loading.gif">
-</div>
+  <!-- Loading GIF, replace with bootstrap loadbar? -->
+  <div id="overlay">
+    <img id="loading-anim" src="loading.gif">
+  </div>
 
-<ul class="tabrow">
-  <li><a href="index.html">find probes</a></li>
-  <li class="selected">stats</li>
-</ul>
+  <!-- Notice Alert -->
+  <div class="container-full" id="alert">
+    <div class="alert alert-dismissible alert-warning" id="notice">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <h4>Notice!</h4>
+      <p>
+        Note: this data has not been validated properly yet and should be used with care.<br />
+        Last update: <span id="last_update"></span>
+      </p>
+    </div>
+  </div>
 
-<div id="content">
+  <!-- Form -->
+  <div class="container-fluid mt-3">
+    <form class="ml-1">
+      <div class="form-group form-inline">
+        How many probes are
+        <select class="form-control ml-2 mr-2" id="select_constraint">
+          <option value="new_in"  selected="selected">new</option>
+          <option value="is_in">recorded</option>
+        </select>
+        on channel
+        <select class="form-control ml-2 mr-2" id="select_channel">
+          <option value="release" selected="selected">release</option>
+          <option value="beta">beta</option>
+          <option value="aurora">aurora</option>
+          <option value="nightly">nightly</option>
+        </select>
+        for each version?
+      </div>
+    </form>
+  </div>
 
-<form>
-  How many probes are
-  <select id="select_constraint">
-    <option value="new_in"  selected="selected">new</option>
-    <option value="is_in">recorded</option>
-  </select>
-  on channel
-  <select id="select_channel">
-    <option value="release" selected="selected">release</option>
-    <option value="beta">beta</option>
-    <option value="aurora">aurora</option>
-    <option value="nightly">nightly</option>
-  </select>
-  for each version?
-</form>
+  <hr />
 
-<svg id="stats" width="960" height="500"></svg>
+  <!-- SVG placeholder for D3 Chart -->
+  <div class="container-fluid">
+    <svg class="img-fluid" id="stats" width="960" height="500"></svg>
+  </div>
 
-</div>
+  <!-- JS Files -->
+  <!-- JS: jQuery 3.2.1 -->
+  <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+  <!-- JS: Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <!-- JS: D3 Visualization -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- JS: Custom Functions -->
+  <script type="text/javascript" src="stats.js"></script>
+  <!-- JS: Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
 </html>
