--- a/stats.html
+++ b/stats.html
@@ -35,6 +35,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="stats.html">Stats</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/georgf/fx-data-explorer/issues/new" target="_blank">File a bug</a>
+          </li>
         </ul>
       </div>
     </nav>
