--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <tr><td>Kind:</td><td id="detail-kind"></td></tr>
         <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
         <tr><td>Bug numbers:</td><td id="detail-bug-numbers"></td></tr>
+        <tr><td>Recorded in versions:</td><td id="detail-recording-range"></td></tr>
         <tr><td>Recorded in processes:</td><td id="detail-processes"></td></tr>
         <tr><td>C++ guard:</td><td id="detail-cpp-guard"></td></tr>
         <tr><td>Bucket count:</td><td id="detail-histogram-bucket-count"></td></tr>
