--- a/stats.html
+++ b/stats.html
@@ -26,7 +26,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Probe data</a>
+      <a class="navbar-brand" href="#">Probe dictionary</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -37,6 +37,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/georgf/fx-data-explorer/issues/new" target="_blank">File a bug</a>
+          </li>
+          <li>
+            <a class="nav-link" href="https://telemetry.mozilla.org/">Telemetry portal</a>
           </li>
         </ul>
       </div>
