--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="theme_cosmo.min.css">
   <!-- CSS: LoadingBar -->
   <link rel="stylesheet" href="explorer.css">
+  <!-- Font Awesome -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
 
@@ -40,10 +42,10 @@
             <a class="nav-link" href="stats.html">Stats</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/mozilla/probe-dictionary/issues/new" target="_blank">File a bug</a>
+            <a class="nav-link" href="https://github.com/mozilla/probe-dictionary/issues/new" target="_blank"><i class="fa fa-bug"></i> File a bug</a>
           </li>
           <li>
-            <a class="nav-link" href="https://telemetry.mozilla.org/">Telemetry portal</a>
+            <a class="nav-link" href="https://telemetry.mozilla.org/"><i class="fa fa-home"></i> Telemetry portal</a>
           </li>
         </ul>
         <div class="navbar-text my-lg-0" id="last-updated">
