--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           </div>
           on channel
           <select class="form-control ml-2 mr-2" id="select_channel">
+            <option value="any">any</option>
             <option value="release" selected="selected">release</option>
             <option value="beta">beta</option>
             <option value="nightly">nightly</option>
