--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           </div>
           on channel
           <select class="form-control ml-2 mr-2" id="select_channel">
-            <option value="any">any</option>
-            <option value="release" selected="selected">release</option>
+            <option value="any" selected="selected">any</option>
+            <option value="release">release</option>
             <option value="beta">beta</option>
             <option value="nightly">nightly</option>
           </select>
@@ -96,7 +96,7 @@
         </div>
         <div class="form-group form-inline" id="optout-selection-element">
           <!-- This is not shown for the stats view. -->
-          <input class="form-control mr-2" id="optout" type="checkbox" checked="checked">
+          <input class="form-control mr-2" id="optout" type="checkbox">
           <label for="optout">Show only measurements collected on release.</label>
         </div>
         <div class="form-group form-inline" id="text-search-element">
