--- a/index.html
+++ b/index.html
@@ -71,44 +71,50 @@
 
     <div class="container-fluid" id="search-form">
       <form class="ml-1 mt-3">
-        <div class="form-group form-inline">
-          Probe is
-          <select class="form-control ml-2 mr-2" id="select_constraint">
-            <option value="is_in" selected="selected">recorded</option>
-            <option value="new_in">new</option>
-            <option value="is_expired">expired</option>
-          </select>
-          <div id="version-selection-element">
-            <!-- This is not shown for the stats view. -->
-            in version
-            <select class="form-control ml-2 mr-2" id="select_version">
-              <option id="version_any" value="any" selected="selected">any</option>
-            </select>
+        <div class="form-group form-inline" id="text-search-element">
+          <!-- This is not shown for the stats view. -->
+          <div class="input-group mr-2">
+            <input class="form-control"
+                   id="text_search" name="text_search" placeholder="Search for text...">
+            <div class="input-group-addon" ><i class="fa fa-search"></i></div>
           </div>
-          on channel
-          <select class="form-control ml-2 mr-2" id="select_channel">
-            <option value="any" selected="selected">any</option>
-            <option value="release">release</option>
-            <option value="beta">beta</option>
-            <option value="nightly">nightly</option>
+          in
+          <select class="form-control ml-2 mr-2" id="search_constraint">
+            <option value="in_any" selected="selected">any text field</option>
+            <option value="in_name">name</option>
+            <option value="in_description">description</option>
           </select>
           .
         </div>
-        <div class="form-group form-inline" id="optout-selection-element">
-          <!-- This is not shown for the stats view. -->
-          <input class="form-control mr-2" id="optout" type="checkbox">
-          <label for="optout">Show only measurements collected on release.</label>
-        </div>
-        <div class="form-group form-inline" id="text-search-element">
-          <!-- This is not shown for the stats view. -->
-          Text search
-          <select class="form-control ml-2 mr-2" id="search_constraint">
-            <option value="in_any" selected="selected">in any text field</option>
-            <option value="in_name">in name</option>
-            <option value="in_description">in description</option>
-          </select>
-          for:
-          <input class="form-control ml-2 mr-2" id="text_search" name="text_search">
+        <div id="probe-filters">
+          <div class="form-group form-inline">
+            Filter for probes
+            <select class="form-control form-control-sm ml-1 mr-1" id="select_constraint">
+              <option value="is_in" selected="selected">recorded</option>
+              <option value="new_in">new</option>
+              <option value="is_expired">expired</option>
+            </select>
+            <div id="version-selection-element">
+              <!-- This is not shown for the stats view. -->
+              in version
+              <select class="form-control form-control-sm ml-1 mr-1" id="select_version">
+                <option id="version_any" value="any" selected="selected">any</option>
+              </select>
+            </div>
+            on channel
+            <select class="form-control form-control-sm ml-1 mr-1" id="select_channel">
+              <option value="any" selected="selected">any</option>
+              <option value="release">release</option>
+              <option value="beta">beta</option>
+              <option value="nightly">nightly</option>
+            </select>
+            .
+          </div>
+          <div class="form-group form-inline" id="optout-selection-element">
+            <!-- This is not shown for the stats view. -->
+            <input class="form-control form-control-sm mr-1" id="optout" type="checkbox">
+            <label for="optout">Show only measurements collected on release.</label>
+          </div>
         </div>
       </form>
     </div>
