--- a/index.html
+++ b/index.html
@@ -145,29 +145,29 @@
       </button>
       <br />
       <br />
-      <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
-        <tr><td>Type:</td><td id="detail-probe-type"></td></tr>
-        <tr><td>Population:</td><td id="detail-recording-type"></td></tr>
+      <table class="table table-sm table-striped table-hover table-bordered border-0">
+        <tr><td class="fit pr-2">Type:</td><td id="detail-probe-type" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Population:</td><td id="detail-recording-type" class="grow"></td></tr>
         <tr id="detail-datasets-row">
-          <td>Available in:</td><td id="detail-datasets-content"></td>
+          <td class="fit pr-2">Available in:</td><td id="detail-datasets-content" class="grow"></td>
         </tr>
       </table>
       <br />
       <div id="detail-description">...</div>
       <br />
-      <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
-        <tr><td>Kind:</td><td id="detail-kind"></td></tr>
-        <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
-        <tr><td>Bug numbers:</td><td id="detail-bug-numbers"></td></tr>
-        <tr><td>Recorded in versions:</td><td id="detail-recording-range"></td></tr>
-        <tr><td>Recorded in processes:</td><td id="detail-processes"></td></tr>
-        <tr><td>C++ guard:</td><td id="detail-cpp-guard"></td></tr>
-        <tr><td>Bucket count:</td><td id="detail-histogram-bucket-count"></td></tr>
-        <tr><td>Low:</td><td id="detail-histogram-low"></td></tr>
-        <tr><td>High:</td><td id="detail-histogram-high"></td></tr>
-        <tr><td>Methods:</td><td id="detail-event-methods"></td></tr>
-        <tr><td>Objects:</td><td id="detail-event-objects"></td></tr>
-        <tr><td>Extra keys:</td><td id="detail-event-extra-keys"></td></tr>
+      <table class="table table-sm table-striped table-hover table-bordered border-0">
+        <tr><td class="fit ml-1">Kind:</td><td id="detail-kind" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Keyed:</td><td id="detail-keyed" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Bug numbers:</td><td id="detail-bug-numbers" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Recorded in versions:</td><td id="detail-recording-range" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Recorded in processes:</td><td id="detail-processes" class="grow"></td></tr>
+        <tr><td class="fit pr-2">C++ guard:</td><td id="detail-cpp-guard" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Bucket count:</td><td id="detail-histogram-bucket-count" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Low:</td><td id="detail-histogram-low" class="grow"></td></tr>
+        <tr><td class="fit pr-2">High:</td><td id="detail-histogram-high" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Methods:</td><td id="detail-event-methods" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Objects:</td><td id="detail-event-objects" class="grow"></td></tr>
+        <tr><td class="fit pr-2">Extra keys:</td><td id="detail-event-extra-keys" class="grow"></td></tr>
       </table>
     </div>
   </div>
