make all navbar links active

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
               <i class="fa fa-search"></i> Find probes <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" data-toggle="tab" href="#stats-view" role="tab" aria-controls="stats-view">
               <i class="fa fa-bar-chart"></i> Stats
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="https://github.com/mozilla/probe-dictionary/issues/new" target="_blank"><i class="fa fa-bug"></i> File a bug</a>
           </li>
-          <li>
+          <li class="nav-item active">
             <a class="nav-link" href="https://telemetry.mozilla.org/"><i class="fa fa-home"></i> Telemetry portal</a>
           </li>
         </ul>
