--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Firefox Probe Dictionary - Find Probes</title>
+	<title>Glean Dictionary - Find Glean Metrics</title>
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
